adding cf stuffs

--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -39,8 +39,10 @@
     "        \"logs/2023-12-14-yang-crash/log_60_2023-12-14-20-26-16.ulg\",\n",
     "        \"logs/2023-12-13-nishanth-sysid/log_46_2023-12-13-21-08-08-left-and-right.ulg\"\n",
     "    ]\n",
-    "\n",
-    "dfs = [load_ulg(file) for file in ulog_files]"
+    "elif model_name == \"crazyflie\":\n",
+    "    log_files = [\n",
+    "        \"logs_crazyflie/desk\"\n",
+    "    ]\n"
    ]
   },
   {
@@ -121,7 +123,34 @@
     "            [0, 0,  1]\n",
     "        ])\n",
     "    }\n",
-    "    g = np.array([0, 0, -model[\"gravity\"]])"
+    "    g = np.array([0, 0, -model[\"gravity\"]])\n",
+    "elif model_name == \"race6\":\n",
+    "    pass # todo: fill this\n",
+    "elif model_name == \"crazyflie\":\n",
+    "    rotor_x_displacement = 0.028\n",
+    "    rotor_y_displacement = 0.028\n",
+    "    model = {\n",
+    "        \"gravity\": 9.81,\n",
+    "        \"mass\": 0.027,\n",
+    "        \"rotor_positions\": np.array([\n",
+    "            [ rotor_x_displacement, -rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement, -rotor_y_displacement, 0],\n",
+    "            [-rotor_x_displacement,  rotor_y_displacement, 0],\n",
+    "            [ rotor_x_displacement,  rotor_y_displacement, 0]\n",
+    "        ]),\n",
+    "        \"rotor_thrust_directions\": np.array([\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1],\n",
+    "            [0, 0, 1]\n",
+    "        ]),\n",
+    "        \"rotor_torque_directions\": np.array([\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0,  1],\n",
+    "            [0, 0, -1],\n",
+    "            [0, 0,  1]\n",
+    "        ])\n",
+    "    }"
    ]
   },
   {
@@ -138,7 +167,7 @@
    "outputs": [],
    "source": [
     "wanted_columns = [\n",
-    "    *[f\"vehicle_attitude_q[{i}]\" for i in range(4)],\n",
+    "#     *[f\"vehicle_attitude_q[{i}]\" for i in range(4)],\n",
     "    *[f\"vehicle_acceleration_xyz[{i}]\" for i in range(3)],\n",
     "    *[f\"vehicle_angular_velocity_xyz[{i}]\" for i in range(3)],\n",
     "    *[f\"vehicle_angular_velocity_xyz_derivative[{i}]\" for i in range(3)],\n",
@@ -147,17 +176,33 @@
     "\n",
     "# flights => timeseries (timestamp + single value) => split up into separate time-series based on gaps\n",
     "\n",
-    "flights = [\n",
-    "    {\n",
-    "        \"name\": name,\n",
-    "        \"data\": {\n",
-    "            name: {\n",
-    "                \"timestamps\": np.array(c.index),\n",
-    "                \"values\": np.array(c)\n",
-    "            } for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]\n",
-    "        }\n",
-    "    } for name, df in zip(ulog_files, dfs)\n",
-    "]"
+    "if model_name in [\"fs\", \"x500\", \"race6\"]:\n",
+    "    dfs = [load_ulg(file) for file in ulog_files]\n",
+    "    flights = [\n",
+    "        {\n",
+    "            \"name\": name,\n",
+    "            \"convention\": \"frd\",\n",
+    "            \"data\": {\n",
+    "                name: {\n",
+    "                    \"timestamps\": np.array(c.index),\n",
+    "                    \"values\": np.array(c)\n",
+    "                } for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]\n",
+    "            }\n",
+    "        } for name, df in zip(ulog_files, dfs)\n",
+    "    ]\n",
+    "elif model_name == \"crazyflie\":\n",
+    "    flights = [\n",
+    "        {\n",
+    "            \"name\": name,\n",
+    "            \"convention\": \"flu\",\n",
+    "            \"data\": {\n",
+    "                name: {\n",
+    "                    \"timestamps\": np.array(c.index),\n",
+    "                    \"values\": np.array(c)\n",
+    "                } for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]\n",
+    "            }\n",
+    "        } for name, df in zip(ulog_files, dfs)\n",
+    "    ]"
    ]
   },
   {
@@ -493,6 +538,7 @@
     "        for subflight_i, subflight in enumerate(subflights):\n",
     "            flights_output.append({\n",
     "                \"name\": flight[\"name\"] + f\"_{subflight_i}\",\n",
+    "                \"convention\": flight[\"convention\"],\n",
     "                \"timestamps\": subflight[highest_frequency_name][\"timestamps\"],\n",
     "                \"data\": subflight\n",
     "            })\n",
@@ -523,7 +569,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def filter_ema(timestamps, rpm_setpoints, T_m):\n",
     "    rpms_filtered = []\n",
     "    rpm = None\n",
@@ -539,7 +584,7 @@
     "        previous_t = t\n",
     "    return np.array(rpms_filtered)\n",
     "\n",
-    "def combine(flights, T_m, frd=True, T_omega=0.05, thrust_curves=None):\n",
+    "def combine(flights, T_m, T_omega=0.05, thrust_curves=None):\n",
     "    assert thrust_curves is None or len(thrust_curves) == 4\n",
     "    from scipy.spatial.transform import Rotation as R\n",
     "    def FRD2FLU(x):\n",
@@ -548,25 +593,30 @@
     "    def FRD2FLU_quat(q):\n",
     "        return R.from_quat([q[1], -q[2], -q[3], q[0]])\n",
     "    from copy import deepcopy\n",
-    "    flights = deepcopy(flights)\n",
+    "#     flights = deepcopy(flights)\n",
+    "    new_flights = []\n",
     "    for flight in flights:\n",
+    "        new_flight = {}\n",
     "        timestamps = flight[\"timestamps\"]\n",
+    "        frd = flight[\"convention\"] == \"frd\"\n",
     "        # num_steps = len(timestamps)\n",
     "        rpm_setpoints = np.array([flight[\"data\"][f\"{output_topic}_control[{i}]\"][\"values\"] for i in range(4)]).T\n",
-    "        flight[\"rpm_setpoints\"] = rpm_setpoints\n",
-    "        flight[\"rpms\"] = filter_ema(timestamps, rpm_setpoints, T_m)\n",
-    "        acceleration = np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
-    "        flight[\"acceleration\"] = np.array(list(map(FRD2FLU, acceleration))) if frd else acceleration\n",
+    "\n",
+    "        acceleration_original_frame = np.array([flight[\"data\"][f\"vehicle_acceleration_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "        acceleration = np.array(list(map(FRD2FLU, acceleration_original_frame))) if frd else acceleration_original_frame\n",
     "        omega_original_frame = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz[{i}]\"][\"values\"] for i in range(3)]).T\n",
     "        omega = np.array(list(map(FRD2FLU, omega_original_frame))) if frd else omega_original_frame\n",
+    "        if f\"vehicle_angular_velocity_xyz_derivative[0]\" in flight[\"data\"]:\n",
+    "            domega_original_frame = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz_derivative[{i}]\"][\"values\"] for i in range(3)]).T\n",
+    "            domega = np.array(list(map(FRD2FLU, domega_original_frame))) if frd else domega_original_frame\n",
+    "        else:\n",
+    "            domega = flight[\"domega_gradient\"] = np.gradient(omega, timestamps, axis=0)\n",
+    "        flight[\"rpm_setpoints\"] = rpm_setpoints\n",
+    "        flight[\"rpms\"] = filter_ema(timestamps, rpm_setpoints, T_m)\n",
+    "        flight[\"acceleration\"] = acceleration\n",
     "        flight[\"omega\"] = omega\n",
-    "        domega_original_frame = np.array([flight[\"data\"][f\"vehicle_angular_velocity_xyz_derivative[{i}]\"][\"values\"] for i in range(3)]).T\n",
-    "        domega = np.array(list(map(FRD2FLU, domega_original_frame))) if frd else domega_original_frame\n",
     "        flight[\"domega\"] = domega\n",
-    "        flight[\"domega_smooth\"] = filter_ema(timestamps, domega, T_omega)\n",
-    "        omega_fd = (omega[1:] - omega[:-1]) / (timestamps[1:] - timestamps[:-1]).reshape(-1, 1)\n",
-    "        flight[\"domega_fd\"] = np.concatenate([omega_fd, [omega_fd[-1]]])\n",
-    "        flight[\"domega_gradient\"] = np.gradient(omega, timestamps, axis=0)\n",
+    "        \n",
     "        if thrust_curves is not None:\n",
     "            def apply_thrust_curves(rpms, thrust_curves):\n",
     "                thrusts = []\n",
@@ -596,9 +646,6 @@
     "        \"acceleration\": np.concatenate([flight[\"acceleration\"] for flight in flights]),\n",
     "        \"omega\": np.concatenate([flight[\"omega\"] for flight in flights]),\n",
     "        \"domega\": np.concatenate([flight[\"domega\"] for flight in flights]),\n",
-    "        \"domega_smooth\": np.concatenate([flight[\"domega_smooth\"] for flight in flights]),\n",
-    "        \"domega_fd\": np.concatenate([flight[\"domega_fd\"] for flight in flights]),\n",
-    "        \"domega_gradient\": np.concatenate([flight[\"domega_gradient\"] for flight in flights]),\n",
     "        **thrusts_combined\n",
     "    }, flights\n"
    ]
