adding more cf loading

--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"fs\"\n",
+    "model_name = \"crazyflie\"\n",
     "if model_name == \"fs\":\n",
     "    ulog_files = [\n",
     "        \"logs/2024-01-08-pavel-fs/log_63_2024-1-8-16-37-54.ulg\",\n",
@@ -166,6 +166,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cfusdlog\n",
+    "\n",
+    "logData = cfusdlog.decode(log_files[0])\n",
+    "logData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wanted_columns = [\n",
     "#     *[f\"vehicle_attitude_q[{i}]\" for i in range(4)],\n",
     "    *[f\"vehicle_acceleration_xyz[{i}]\" for i in range(3)],\n",
@@ -191,18 +203,44 @@
     "        } for name, df in zip(ulog_files, dfs)\n",
     "    ]\n",
     "elif model_name == \"crazyflie\":\n",
-    "    flights = [\n",
-    "        {\n",
-    "            \"name\": name,\n",
-    "            \"convention\": \"flu\",\n",
-    "            \"data\": {\n",
-    "                name: {\n",
-    "                    \"timestamps\": np.array(c.index),\n",
-    "                    \"values\": np.array(c)\n",
-    "                } for name, c in [(wc, df[wc].dropna()) for wc in wanted_columns]\n",
-    "            }\n",
-    "        } for name, df in zip(ulog_files, dfs)\n",
-    "    ]"
+    "    import cfusdlog # use the download_cfusdlog.sh script to download cfusdlog.py\n",
+    "    decoded_data = [cfusdlog.decode(f) for f in log_files]\n",
+    "    flights = []\n",
+    "    for name, data in zip(log_files, decoded_data):\n",
+    "        print(data)\n",
+    "        flight = {}\n",
+    "        flight[\"name\"] = name\n",
+    "        flight[\"convention\"] = \"flu\"\n",
+    "        flight[\"data\"] = {}\n",
+    "        timestamps = data[\"fixedFrequency\"][\"timestamp\"] / 1000\n",
+    "        for key, value in data[\"fixedFrequency\"].items():\n",
+    "            if key.startswith(\"acc\"):\n",
+    "                if key[-1:] == \"x\":\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                if key[-1:] == \"y\":\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                if key[-1:] == \"z\":\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "            elif key.startswith(\"gyro\"):\n",
+    "                if key[-1:] == \"x\":\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                if key[-1:] == \"y\":\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                if key[-1:] == \"z\":\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "            elif key.startswith(\"motor\"):\n",
+    "                flight[\"data\"][f\"{output_topic}_control[{int(key[-1:])-1}]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "        flights.append(flight)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights[0][\"data\"].keys()"
    ]
   },
   {
@@ -369,6 +407,28 @@
     "            \"flight\": 1,\n",
     "            \"start\": 10,\n",
     "            \"end\": 40\n",
+    "        }\n",
+    "    ]\n",
+    "elif model_name == \"crazyflie\":\n",
+    "    timeframes_thrust = [\n",
+    "        {\n",
+    "            \"flight\": 0,\n",
+    "            \"start\": 100,\n",
+    "            \"end\": 110\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_roll_pitch = [\n",
+    "        {\n",
+    "            \"flight\": 0,\n",
+    "            \"start\": 100,\n",
+    "            \"end\": 110\n",
+    "        }\n",
+    "    ]\n",
+    "    timeframes_inertia_yaw = [\n",
+    "        {\n",
+    "            \"flight\": 0,\n",
+    "            \"start\": 100,\n",
+    "            \"end\": 110\n",
     "        }\n",
     "    ]"
    ]
@@ -873,6 +933,20 @@
     "plt.scatter(combined_thrust[\"thrusts\"].sum(axis=1), combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"])\n",
     "plt.plot([0, 100], [0, 100], color=\"red\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
