--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -41,7 +41,9 @@
     "    ]\n",
     "elif model_name == \"crazyflie\":\n",
     "    log_files = [\n",
-    "        \"logs_crazyflie/desk\"\n",
+    "#         \"logs_crazyflie/desk\"\n",
+    "        \"logs_crazyflie/up_down_left_right\",\n",
+    "        \"logs_crazyflie/yaw\"\n",
     "    ]\n"
    ]
   },
@@ -410,26 +412,43 @@
     "        }\n",
     "    ]\n",
     "elif model_name == \"crazyflie\":\n",
+    "    common = {\n",
+    "        \"flight\": 0,\n",
+    "        \"start\": 40,\n",
+    "        \"end\": 70\n",
+    "    }\n",
     "    timeframes_thrust = [\n",
-    "        {\n",
-    "            \"flight\": 0,\n",
-    "            \"start\": 100,\n",
-    "            \"end\": 110\n",
-    "        }\n",
+    "        common\n",
     "    ]\n",
     "    timeframes_inertia_roll_pitch = [\n",
-    "        {\n",
-    "            \"flight\": 0,\n",
-    "            \"start\": 100,\n",
-    "            \"end\": 110\n",
-    "        }\n",
+    "        common\n",
     "    ]\n",
     "    timeframes_inertia_yaw = [\n",
     "        {\n",
-    "            \"flight\": 0,\n",
-    "            \"start\": 100,\n",
-    "            \"end\": 110\n",
-    "        }\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 70,\n",
+    "            \"end\": 72\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 80,\n",
+    "            \"end\": 81.5\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 85,\n",
+    "            \"end\": 90.5\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 93,\n",
+    "            \"end\": 95\n",
+    "        },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 101,\n",
+    "            \"end\": 103\n",
+    "        },\n",
     "    ]"
    ]
   },
@@ -821,9 +840,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(combined_thrust[\"thrusts\"].sum(axis=1), combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"], s=0.05) \n",
-    "plt.plot([0, 100], [0, 100], color=\"red\")\n",
-    "K_f_mean"
+    "predicted_thrust = combined_thrust[\"thrusts\"].sum(axis=1)\n",
+    "actual_thrust = combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"]\n",
+    "plt.scatter(predicted_thrust, actual_thrust, s=0.05) \n",
+    "\n",
+    "plt.plot([predicted_thrust.min(), predicted_thrust.max()], [actual_thrust.min(), actual_thrust.max()], color=\"red\")"
    ]
   },
   {
@@ -851,7 +872,7 @@
     "    I_axis = 1/(dw**2).sum() * np.inner(dw, torque)\n",
     "    I_inv_axis = 1/(torque**2).sum() * np.inner(dw, torque)\n",
     "#     I_axis = 1/I_inv_axis\n",
-    "    print(f\"I_{axis_name}{axis_name}: {I_axis:.3f}\")\n",
+    "    print(f\"I_{axis_name}{axis_name}: {I_axis:.10f}\")\n",
     "    plt.figure()\n",
     "    plt.title(f\"Axis: {axis_name}\")\n",
     "    if perc < 50:\n",
@@ -884,7 +905,7 @@
    "outputs": [],
    "source": [
     "K_ds = []\n",
-    "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
+    "perc_candidates = [5] #np.linspace(0.1, 50, 20)\n",
     "for perc in perc_candidates:\n",
     "    combined_inertia_yaw[\"thrusts\"].shape\n",
     "    model[\"rotor_torque_directions\"].shape\n",
@@ -923,30 +944,6 @@
     "\n",
     "    print(f\"K_d: {K_d:.3f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(combined_thrust[\"thrusts\"].sum(axis=1), combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"])\n",
-    "plt.plot([0, 100], [0, 100], color=\"red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
