cf estimate looks correct

--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "output_topic = \"actuator_motors_mux\"\n",
     "inertia_ratio = 1.879\n",
-    "exponents_thrust_curve = [0, 2]"
+    "exponents_thrust_curve = [0, 1, 2]"
    ]
   },
   {
@@ -171,7 +171,7 @@
     "import cfusdlog\n",
     "\n",
     "logData = cfusdlog.decode(log_files[0])\n",
-    "logData"
+    "plt.plot(logData[\"fixedFrequency\"][\"acc.z\"][:-6000])"
    ]
   },
   {
@@ -218,20 +218,20 @@
     "        for key, value in data[\"fixedFrequency\"].items():\n",
     "            if key.startswith(\"acc\"):\n",
     "                if key[-1:] == \"x\":\n",
-    "                    flight[\"data\"][\"vehicle_acceleration_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value) * 9.81} # cf accelerometer logs are in gs\n",
     "                if key[-1:] == \"y\":\n",
-    "                    flight[\"data\"][\"vehicle_acceleration_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value) * 9.81}\n",
     "                if key[-1:] == \"z\":\n",
-    "                    flight[\"data\"][\"vehicle_acceleration_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_acceleration_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value) * 9.18}\n",
     "            elif key.startswith(\"gyro\"):\n",
     "                if key[-1:] == \"x\":\n",
-    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[0]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)/360*2*np.pi} # cf gyro logs are in degrees/s\n",
     "                if key[-1:] == \"y\":\n",
-    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[1]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)/360*2*np.pi}\n",
     "                if key[-1:] == \"z\":\n",
-    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                    flight[\"data\"][\"vehicle_angular_velocity_xyz[2]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)/360*2*np.pi}\n",
     "            elif key.startswith(\"motor\"):\n",
-    "                flight[\"data\"][f\"{output_topic}_control[{int(key[-1:])-1}]\"] = {\"timestamps\": timestamps, \"values\": np.array(value)}\n",
+    "                flight[\"data\"][f\"{output_topic}_control[{int(key[-1:])-1}]\"] = {\"timestamps\": timestamps, \"values\": np.array(value) / 65536}\n",
     "        flights.append(flight)\n",
     "        "
    ]
@@ -424,11 +424,11 @@
     "        common\n",
     "    ]\n",
     "    timeframes_inertia_yaw = [\n",
-    "        {\n",
-    "            \"flight\": 1,\n",
-    "            \"start\": 70,\n",
-    "            \"end\": 72\n",
-    "        },\n",
+    "#         {\n",
+    "#             \"flight\": 1,\n",
+    "#             \"start\": 70,\n",
+    "#             \"end\": 72\n",
+    "#         },\n",
     "        {\n",
     "            \"flight\": 1,\n",
     "            \"start\": 80,\n",
@@ -872,15 +872,17 @@
     "    I_axis = 1/(dw**2).sum() * np.inner(dw, torque)\n",
     "    I_inv_axis = 1/(torque**2).sum() * np.inner(dw, torque)\n",
     "#     I_axis = 1/I_inv_axis\n",
-    "    print(f\"I_{axis_name}{axis_name}: {I_axis:.10f}\")\n",
+    "    print(f\"I_{axis_name}{axis_name}: {I_axis}\")\n",
     "    plt.figure()\n",
-    "    plt.title(f\"Axis: {axis_name}\")\n",
+    "#     plt.title(f\"Axis: {axis_name}\")\n",
     "    if perc < 50:\n",
-    "        plt.scatter(torque_full, dw_full, s=0.1)\n",
-    "    plt.scatter(torque, dw, s=0.1)\n",
+    "        plt.scatter(torque_full, dw_full, s=0.10)\n",
+    "    plt.scatter(torque, dw, s=0.01)\n",
     "    torques_in = np.linspace(torque_full.min(), torque_full.max(), 100)\n",
     "    plt.plot(torques_in, torques_in / (I_axis), color=\"red\")\n",
-    "    plt.plot(torques_in, torques_in / (1/I_inv_axis), color=\"red\")\n",
+    "#     plt.plot(torques_in, torques_in / (1/I_inv_axis), color=\"red\")\n",
+    "    plt.xlabel(f\"Estiamted Torque ({axis_name}) [Nm]\")\n",
+    "    plt.ylabel(f\"Angular Acceleration ({axis_name}) [$rad/s^{{2}}$]\")\n",
     "    plt.savefig(f\"figures/inertia_{axis_name}.pdf\")\n",
     "    plt.show()\n",
     "    I.append(I_axis)"
@@ -895,7 +897,7 @@
     "I_xx, I_yy = I[:2]\n",
     "I_zz = (I_xx + I_yy)/2 * inertia_ratio\n",
     "I = [I_xx, I_yy, I_zz]\n",
-    "print(f\"I_xx: {I_xx:.4f}, I_yy: {I_yy:.4f}, I_zz: {I_zz:.4f},\")"
+    "print(f\"I_xx: {I_xx}, I_yy: {I_yy}, I_zz: {I_zz},\")"
    ]
   },
   {
