--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -168,18 +168,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cfusdlog\n",
-    "\n",
-    "logData = cfusdlog.decode(log_files[0])\n",
-    "plt.plot(logData[\"fixedFrequency\"][\"acc.z\"][:-6000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "wanted_columns = [\n",
     "#     *[f\"vehicle_attitude_q[{i}]\" for i in range(4)],\n",
     "    *[f\"vehicle_acceleration_xyz[{i}]\" for i in range(3)],\n",
@@ -315,26 +303,28 @@
     "    thrust_torque_values = sum(thrust_torque_values)\n",
     "    geometric_torque_values = sum(geometric_torque_values)\n",
     "\n",
-    "    axs[ax].set_title(\"thrust (z)\")\n",
+    "    axs[ax].set_title(\"Linear Dynamics Excitation\")\n",
     "    axs[ax].plot(timestamps, thrust_values[:, 2], label=\"z\")\n",
     "    axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
-    "    axs[ax].set_ylabel('Thrust (z)')\n",
+    "    axs[ax].set_ylabel('Excitation Level')\n",
     "    ax += 1\n",
     "    \n",
-    "    axs[ax].set_title(\"thrust -> torque\")\n",
-    "    axs[ax].plot(timestamps, thrust_torque_values[:, 2], label=\"z\")\n",
-    "    axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
-    "    axs[ax].set_ylabel('Torque (z)')\n",
-    "    ax += 1\n",
-    "\n",
-    "    axs[ax].set_title(\"thrust -> geometry -> torque\")\n",
+    "    axs[ax].set_title(\"Angular Dynamics Excitation (x, y)\")\n",
     "    axs[ax].plot(timestamps, geometric_torque_values[:, 0], label=\"x\")\n",
     "    axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
     "    axs[ax].set_ylabel('Geometry Torque (x)')\n",
     "    axs[ax].plot(timestamps, geometric_torque_values[:, 1], label=\"y\")\n",
     "    axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
-    "    axs[ax].set_ylabel('Geometry Torque (y)')\n",
+    "    axs[ax].set_ylabel('Excitation Level')\n",
     "    ax += 1\n",
+    "    \n",
+    "    axs[ax].set_title(\"Angular Dynamics Excitation (z)\")\n",
+    "    axs[ax].plot(timestamps, thrust_torque_values[:, 2], label=\"z\")\n",
+    "    axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
+    "    axs[ax].set_ylabel('Excitation Level')\n",
+    "    ax += 1\n",
+    "\n",
+    "\n",
     "\n",
     "    axs[-1].set_xlabel('Timestamps')\n",
     "    for ax in axs[:-1]:  # Loop through all axes except the bottommost\n",
@@ -907,7 +897,7 @@
    "outputs": [],
    "source": [
     "K_ds = []\n",
-    "perc_candidates = [5] #np.linspace(0.1, 50, 20)\n",
+    "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
     "for perc in perc_candidates:\n",
     "    combined_inertia_yaw[\"thrusts\"].shape\n",
     "    model[\"rotor_torque_directions\"].shape\n",
@@ -935,7 +925,8 @@
     "\n",
     "    plt.figure()\n",
     "    plt.scatter(thrust_torque_inputs_z_full, b_full, s=0.01)\n",
-    "    # plt.scatter(thrust_torque_inputs_z, dwz, s=0.1, color=\"red\")\n",
+    "    if perc < 50:\n",
+    "        plt.scatter(thrust_torque_inputs_z, b, s=0.1, color=\"red\")\n",
     "    plt.plot(thrust_torque_inputs_z, K_d * thrust_torque_inputs_z, color=\"red\", label=f\"$K_d$ = {K_d:.3f}\")\n",
     "    plt.ylabel(f\"Angular Acceleration (z) $\\\\times$ $I_{{zz}}$ \")\n",
     "    plt.xlabel(f\"Normalized Torque (z)\")\n",
