--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -41,9 +41,13 @@
     "    ]\n",
     "elif model_name == \"crazyflie\":\n",
     "    log_files = [\n",
-    "#         \"logs_crazyflie/desk\"\n",
     "        \"logs_crazyflie/up_down_left_right\",\n",
-    "        \"logs_crazyflie/yaw\"\n",
+    "        \"logs_crazyflie/yaw\",\n",
+    "#         \"logs_crazyflie/up_down0\",\n",
+    "#         \"logs_crazyflie/up_down1\",\n",
+    "#         \"logs_crazyflie/up_down2\",\n",
+    "#         \"logs_crazyflie/up_down4\",\n",
+    "#         \"logs_crazyflie/left_right0\",\n",
     "    ]\n"
    ]
   },
@@ -55,7 +59,8 @@
    "source": [
     "output_topic = \"actuator_motors_mux\"\n",
     "inertia_ratio = 1.879\n",
-    "exponents_thrust_curve = [0, 1, 2]"
+    "exponents_thrust_curve = [0, 1, 2]\n",
+    "dpi=1000"
    ]
   },
   {
@@ -225,15 +230,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flights[0][\"data\"].keys()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,12 +276,11 @@
     "for flight_i, flight in enumerate(flights):\n",
     "    # Assuming you have 4 motor plots and 4 additional plots for thrust and torque analyses\n",
     "    fig, axs = plt.subplots(4, 1, figsize=(10, 8), sharex=True)\n",
-    "    fig.suptitle(f\"Flight {flight_i}: {flight['name']}\")\n",
     "\n",
     "    # Plot motor controls\n",
     "    ax = 0\n",
     "    for motor_i, motor in enumerate([f\"{output_topic}_control[{i}]\" for i in range(4)]):\n",
-    "        axs[ax].plot(flight[\"data\"][motor][\"timestamps\"], flight[\"data\"][motor][\"values\"], label=f\"motor {motor_i}\")\n",
+    "        axs[ax].plot(flight[\"data\"][motor][\"timestamps\"], flight[\"data\"][motor][\"values\"], label=f\"Motor {motor_i}\")\n",
     "        axs[ax].legend(loc='upper left', bbox_to_anchor=(1,1))\n",
     "        axs[ax].set_ylabel('Motor Control')\n",
     "    ax += 1\n",
@@ -326,12 +321,15 @@
     "\n",
     "\n",
     "\n",
-    "    axs[-1].set_xlabel('Timestamps')\n",
-    "    for ax in axs[:-1]:  # Loop through all axes except the bottommost\n",
+    "    axs[-1].set_xlabel('Time [s]')\n",
+    "    for ax in axs[:-1]:\n",
     "        ax.xaxis.set_tick_params(labelbottom=True)\n",
-    "\n",
-    "    plt.tight_layout(rect=[0, 0, 1, 0.99])  # Adjust the layout to make room for the suptitle\n",
-    "    plt.show()"
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"figures/{model_name}_flight{flight_i}.pdf\")\n",
+    "    fig.suptitle(f\"Flight {flight_i}: {flight['name']}\")\n",
+    "    plt.tight_layout(rect=[0, 0, 1, 0.99])\n",
+    "    plt.show()\n",
+    "    "
    ]
   },
   {
@@ -408,17 +406,27 @@
     "        \"end\": 70\n",
     "    }\n",
     "    timeframes_thrust = [\n",
-    "        common\n",
+    "        common,\n",
+    "#         {\n",
+    "#             \"flight\": 5,\n",
+    "#             \"start\": 36,\n",
+    "#             \"end\": 42\n",
+    "#         }\n",
     "    ]\n",
     "    timeframes_inertia_roll_pitch = [\n",
-    "        common\n",
+    "        common,\n",
+    "#         {\n",
+    "#             \"flight\": 6,\n",
+    "#             \"start\": 50,\n",
+    "#             \"end\": 61\n",
+    "#         },\n",
     "    ]\n",
     "    timeframes_inertia_yaw = [\n",
-    "#         {\n",
-    "#             \"flight\": 1,\n",
-    "#             \"start\": 70,\n",
-    "#             \"end\": 72\n",
-    "#         },\n",
+    "        {\n",
+    "            \"flight\": 1,\n",
+    "            \"start\": 70,\n",
+    "            \"end\": 72\n",
+    "        },\n",
     "        {\n",
     "            \"flight\": 1,\n",
     "            \"start\": 80,\n",
@@ -795,7 +803,7 @@
     "from tqdm import tqdm\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "T_m_candidates = np.linspace(0.001, 0.3, 20)\n",
+    "T_m_candidates = np.linspace(0.001, 0.5, 100)\n",
     "results = [(T_m, *estimate_motor_parameters(combine(sliced_and_interpolated_flights_thrust, T_m)[0], model, exponents_thrust_curve, verbose=False, separate=False)) for T_m in tqdm(T_m_candidates)]\n",
     "T_m, K_fs, rmses = zip(*results)"
    ]
@@ -811,9 +819,14 @@
     "K_f_mean = K_f.mean(axis=0)\n",
     "print(f\"K_f: {K_f}\")\n",
     "print(f\"K_f_mean: {K_f_mean}\")\n",
-    "plt.figure()\n",
-    "plt.plot(T_m_candidates, rmses, label=f\"T_m = {T_m}\")\n",
+    "plt.figure(figsize=(5, 2))\n",
+    "plt.plot(T_m_candidates, rmses)\n",
+    "plt.xlabel(\"First Order Time Constant $T_m$\")\n",
+    "plt.ylabel(\"RMSE (Thrust)\")\n",
+    "plt.axvline(x=T_m, color='red', linestyle='--', linewidth=2, label=f\"Minimum: $T_m$ = {T_m:.3f} s\")\n",
     "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"figures/{model_name}_finding_tau.pdf\")\n",
     "plt.show()\n",
     "\n",
     "thrust_curves = np.array([K_f_mean for _ in range(4)])\n",
@@ -830,11 +843,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if model_name == \"crazyflie\":\n",
+    "    K_f_comparison = np.array([\n",
+    "        [5.48e-04, 6.77e-02, 9.15e-02],\n",
+    "        [0, 0, 1.48e-1],\n",
+    "        [3.75e-04, -1.23e-04, 1.53e-01],\n",
+    "        [-1.30e-03, 1.75e-03, 1.25e-01],\n",
+    "        K_f_mean,\n",
+    "    ])\n",
+    "    labels = [\n",
+    "        \"Förster, 2015\",\n",
+    "        \"Luis et al., 2016\",\n",
+    "        \"Greiff, 2017\",\n",
+    "        \"Nguyen et al., 2023\",\n",
+    "        \"Ours\",\n",
+    "    ]\n",
+    "    input_rpms = np.linspace(0, 1, 100)\n",
+    "    plt.figure(figsize=(5,3))\n",
+    "    for label, K_f in zip(labels, K_f_comparison):\n",
+    "        predictions = []\n",
+    "        for x in input_rpms:\n",
+    "            acc = 0\n",
+    "            for i in range(3):\n",
+    "                acc += K_f[i] * x ** i\n",
+    "            predictions.append(acc)\n",
+    "        plt.plot(input_rpms, predictions, label=label)\n",
+    "    plt.legend()\n",
+    "    plt.xlabel(\"Normalized RPM\")\n",
+    "    plt.ylabel(\"Thrust [N]\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"figures/{model_name}_thrust_curve_comparison.pdf\")\n",
+    "    plt.show()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acceleration = combined_thrust[\"acceleration\"][:, 2] - 9.81\n",
+    "hovering_percentile = 3\n",
+    "acceleration_lower_perc = np.percentile(acceleration, 50-hovering_percentile)\n",
+    "acceleration_upper_perc = np.percentile(acceleration, 50+hovering_percentile)\n",
+    "acceleration_lower_perc, acceleration_upper_perc\n",
+    "mask = (acceleration > acceleration_lower_perc) & (acceleration < acceleration_upper_perc)\n",
+    "hovering_rpms = combined_thrust[\"rpms\"][mask]\n",
+    "hovering_rpm = np.median(hovering_rpms.ravel())\n",
+    "plt.figure(figsize=(5, 2))\n",
+    "plt.hist(hovering_rpms.ravel(), bins=50)\n",
+    "plt.xlabel(f\"Hovering Throttle (+-{hovering_percentile} percentile around 0 acceleration)\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.axvline(x=hovering_rpm, color='red', linestyle='--', linewidth=2, label=f\"Median: {hovering_rpm:.2f}\")\n",
+    "predicted_hovering_rpm = (-K_f_mean[1] + np.sqrt(K_f_mean[1]**2 - 4*K_f_mean[2]*(K_f_mean[0] - 9.81*model[\"mass\"]/4)))/(2*K_f_mean[2])\n",
+    "plt.axvline(x=predicted_hovering_rpm, color='orange', linestyle='-', linewidth=2, label=f\"Predicted: {predicted_hovering_rpm:.2f}\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"figures/{model_name}_hovering_throttle.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "squared_rpm = (combined_thrust[\"rpm_setpoints\"]**2).sum(axis=1)\n",
+    "actual_thrust = combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"]\n",
+    "plt.figure(figsize=(5,5))\n",
+    "plt.scatter(squared_rpm, actual_thrust, s=0.05)\n",
+    "plt.xlabel(\"$\\omega_{{sp}_1}^2 + \\omega_{{sp}_2}^2 + \\omega_{{sp}_3}^2 + \\omega_{{sp}_4}^2$\")\n",
+    "plt.ylabel(\"Actual Thrust [N]\")\n",
+    "# plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"figures/{model_name}_thrust_curve_no_delay.pdf\")\n",
+    "plt.savefig(f\"figures/{model_name}_thrust_curve_no_delay.jpg\", dpi=dpi)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "predicted_thrust = combined_thrust[\"thrusts\"].sum(axis=1)\n",
     "actual_thrust = combined_thrust[\"acceleration\"][:, 2]*model[\"mass\"]\n",
-    "plt.scatter(predicted_thrust, actual_thrust, s=0.05) \n",
-    "\n",
-    "plt.plot([predicted_thrust.min(), predicted_thrust.max()], [actual_thrust.min(), actual_thrust.max()], color=\"red\")"
+    "plt.figure(figsize=(5,5))\n",
+    "plt.scatter(predicted_thrust, actual_thrust, s=0.05)\n",
+    "plt.plot([predicted_thrust.min(), predicted_thrust.max()], [actual_thrust.min(), actual_thrust.max()], linewidth=2, color=\"red\", label=\"Identity\")\n",
+    "plt.xlabel(\"Predicted Thrust [N]\")\n",
+    "plt.ylabel(\"Actual Thrust [N]\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f\"figures/{model_name}_thrust_curve_fit.pdf\")\n",
+    "plt.savefig(f\"figures/{model_name}_thrust_curve_fit.jpg\", dpi=dpi)\n",
+    "plt.show()"
    ]
   },
   {
@@ -863,17 +970,22 @@
     "    I_inv_axis = 1/(torque**2).sum() * np.inner(dw, torque)\n",
     "#     I_axis = 1/I_inv_axis\n",
     "    print(f\"I_{axis_name}{axis_name}: {I_axis}\")\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=(5,4))\n",
     "#     plt.title(f\"Axis: {axis_name}\")\n",
     "    if perc < 50:\n",
     "        plt.scatter(torque_full, dw_full, s=0.10)\n",
     "    plt.scatter(torque, dw, s=0.01)\n",
     "    torques_in = np.linspace(torque_full.min(), torque_full.max(), 100)\n",
-    "    plt.plot(torques_in, torques_in / (I_axis), color=\"red\")\n",
+    "    plt.plot(torques_in, torques_in / (I_axis), color=\"red\", label=f\"$I_{{{axis_name}{axis_name}}}$ = {I_axis:.3e}\")\n",
     "#     plt.plot(torques_in, torques_in / (1/I_inv_axis), color=\"red\")\n",
     "    plt.xlabel(f\"Estiamted Torque ({axis_name}) [Nm]\")\n",
     "    plt.ylabel(f\"Angular Acceleration ({axis_name}) [$rad/s^{{2}}$]\")\n",
-    "    plt.savefig(f\"figures/inertia_{axis_name}.pdf\")\n",
+    "    plt.tick_params(axis='x', which='major', labelsize=8)\n",
+    "    plt.xticks(rotation=15)\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"figures/{model_name}_inertia_{axis_name}.pdf\")\n",
+    "    plt.savefig(f\"figures/{model_name}_inertia_{axis_name}.jpg\", dpi=dpi)\n",
     "    plt.show()\n",
     "    I.append(I_axis)"
    ]
@@ -897,7 +1009,7 @@
    "outputs": [],
    "source": [
     "K_ds = []\n",
-    "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
+    "perc_candidates = [5] #np.linspace(0.1, 50, 20)\n",
     "for perc in perc_candidates:\n",
     "    combined_inertia_yaw[\"thrusts\"].shape\n",
     "    model[\"rotor_torque_directions\"].shape\n",
@@ -932,11 +1044,20 @@
     "    plt.xlabel(f\"Normalized Torque (z)\")\n",
     "    plt.legend()\n",
     "    plt.savefig(f\"figures/K_d_{perc}.pdf\")\n",
+    "    plt.savefig(f\"figures/K_d_{perc}.jpg\", dpi=dpi)\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
     "\n",
     "    print(f\"K_d: {K_d:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
