--- a/sysid/analyze_new.ipynb
+++ b/sysid/analyze_new.ipynb
@@ -422,11 +422,11 @@
     "#         },\n",
     "    ]\n",
     "    timeframes_inertia_yaw = [\n",
-    "        {\n",
-    "            \"flight\": 1,\n",
-    "            \"start\": 70,\n",
-    "            \"end\": 72\n",
-    "        },\n",
+    "#         {\n",
+    "#             \"flight\": 1,\n",
+    "#             \"start\": 70,\n",
+    "#             \"end\": 72\n",
+    "#         },\n",
     "        {\n",
     "            \"flight\": 1,\n",
     "            \"start\": 80,\n",
@@ -1008,8 +1008,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K_ds = []\n",
-    "perc_candidates = [5] #np.linspace(0.1, 50, 20)\n",
+    "K_ms = []\n",
+    "perc_candidates = [50] #np.linspace(0.1, 50, 20)\n",
     "for perc in perc_candidates:\n",
     "    combined_inertia_yaw[\"thrusts\"].shape\n",
     "    model[\"rotor_torque_directions\"].shape\n",
@@ -1031,25 +1031,25 @@
     "    b_full = dwz_full * I_zz\n",
     "    b = dwz * I_zz\n",
     "\n",
-    "    K_d = 1/(thrust_torque_inputs_z ** 2).sum() * np.inner(thrust_torque_inputs_z, b)\n",
+    "    K_m = 1/(thrust_torque_inputs_z ** 2).sum() * np.inner(thrust_torque_inputs_z, b)\n",
     "    print(f\"b: {(b**2).sum()}\")\n",
-    "    K_ds.append(K_d)\n",
+    "    K_ms.append(K_m)\n",
     "\n",
     "    plt.figure()\n",
     "    plt.scatter(thrust_torque_inputs_z_full, b_full, s=0.01)\n",
     "    if perc < 50:\n",
     "        plt.scatter(thrust_torque_inputs_z, b, s=0.1, color=\"red\")\n",
-    "    plt.plot(thrust_torque_inputs_z, K_d * thrust_torque_inputs_z, color=\"red\", label=f\"$K_d$ = {K_d:.3f}\")\n",
+    "    plt.plot(thrust_torque_inputs_z, K_m * thrust_torque_inputs_z, color=\"red\", label=f\"$K_m$ = {K_m:.3e}\")\n",
     "    plt.ylabel(f\"Angular Acceleration (z) $\\\\times$ $I_{{zz}}$ \")\n",
     "    plt.xlabel(f\"Normalized Torque (z)\")\n",
     "    plt.legend()\n",
-    "    plt.savefig(f\"figures/K_d_{perc}.pdf\")\n",
-    "    plt.savefig(f\"figures/K_d_{perc}.jpg\", dpi=dpi)\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\"figures/{model_name}_K_m_{perc}.pdf\")\n",
+    "    plt.savefig(f\"figures/{model_name}_K_m_{perc}.jpg\", dpi=dpi)\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "    print(f\"K_d: {K_d:.3f}\")"
+    "    print(f\"K_m: {K_m:.3f}\")"
    ]
   },
   {
